Fix OpenRemote theme identity provider login
This fixes the configured identity providers not showing when using the OpenRemote theme in Keycloak.

--- a/theme/src/main/resources/theme/openremote/login/resources/css/styles.css
+++ b/theme/src/main/resources/theme/openremote/login/resources/css/styles.css
@@ -134,3 +134,15 @@ i.material-icons {
     position: relative;
     opacity: 1;
 }
+
+hr {
+    margin: 40px 0;
+}
+
+.button-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 10px;
+    padding: 10px;
+}
